--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,148 @@
-langchain-iris
-testcontainers-iris
-llama-iris
-llama-index-legacy
-sentence-transformers
-langchain
-fastembed 
-openai 
-tiktoken
-python-dotenv
-pandas
-ipykernel
-setuptools
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.13
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+appnope==0.1.4
+asttokens==3.0.0
+attrs==25.1.0
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+coloredlogs==15.0.1
+comm==0.2.2
+contourpy==1.3.1
+cycler==0.12.1
+dataclasses-json==0.6.7
+debugpy==1.8.12
+decorator==5.2.1
+Deprecated==1.2.18
+dirtyjson==1.0.8
+distro==1.9.0
+docker==7.1.0
+executing==2.2.0
+fastembed==0.5.1
+filelock==3.17.0
+flatbuffers==25.2.10
+fonttools==4.56.0
+frozenlist==1.5.0
+fsspec==2025.2.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.29.1
+humanfriendly==10.0
+idna==3.10
+intersystems_irispython @ file:///Users/gabriel.yang/test/t-hh/install/intersystems_irispython-5.0.1-8026-cp38.cp39.cp310.cp311.cp312-cp38.cp39.cp310.cp311.cp312-macosx_10_9_universal2.whl#sha256=273268808c4375e18f6ea76e954e1de15aa6f7e79077561eccea8d8b5b0b3f1a
+ipykernel==6.29.5
+ipython==8.32.0
+jedi==0.19.2
+Jinja2==3.1.5
+jiter==0.8.2
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+langchain==0.3.19
+langchain-community==0.3.18
+langchain-core==0.3.39
+langchain-iris==0.2.1
+langchain-text-splitters==0.3.6
+langsmith==0.3.11
+llama-cloud==0.1.13
+llama-index==0.10.68
+llama-index-agent-openai==0.2.9
+llama-index-cli==0.1.13
+llama-index-core==0.10.68.post1
+llama-index-embeddings-openai==0.1.11
+llama-index-indices-managed-llama-cloud==0.2.7
+llama-index-legacy==0.9.48.post4
+llama-index-llms-openai==0.1.31
+llama-index-multi-modal-llms-openai==0.1.9
+llama-index-program-openai==0.1.7
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.33
+llama-index-readers-llama-parse==0.1.6
+llama-iris==0.5.0
+llama-parse==0.4.9
+loguru==0.7.3
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mmh3==4.1.0
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+onnxruntime==1.20.1
+openai==1.64.0
+orjson==3.10.15
+packaging==24.2
+pandas==2.2.3
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+propcache==0.3.0
+protobuf==5.29.3
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py_rust_stemmers==0.1.5
+pydantic==2.10.6
+pydantic-settings==2.8.0
+pydantic_core==2.27.2
+Pygments==2.19.1
+pyparsing==3.2.1
+pypdf==4.3.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-telegram-bot==21.11.1
+pytz==2025.1
+PyYAML==6.0.2
+pyzmq==26.2.1
+regex==2024.11.6
+requests==2.31.0
+requests-toolbelt==1.0.0
+safetensors==0.5.2
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==3.4.1
+setuptools==75.8.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+SQLAlchemy==2.0.38
+sqlalchemy-iris==0.14.0
+stack-data==0.6.3
+striprtf==0.0.26
+sympy==1.13.1
+tenacity==8.5.0
+testcontainers==4.9.1
+testcontainers-iris==1.2.2
+threadpoolctl==3.5.0
+tiktoken==0.9.0
+tokenizers==0.21.0
+torch==2.6.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.49.0
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2025.1
+urllib3==2.3.0
+wcwidth==0.2.13
+wrapt==1.17.2
+yarl==1.18.3
+zstandard==0.23.0
