--- a/requirements.txt
+++ b/requirements.txt
@@ -82,7 +82,7 @@ mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
-numpy==1.26.4
+numpy>=1.24.0
 onnxruntime==1.20.1
 openai==1.64.0
 orjson==3.10.15
@@ -106,10 +106,10 @@ Pygments==2.19.1
 pyparsing==3.2.1
 pypdf==4.3.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-telegram-bot==21.11.1
+python-dotenv>=1.0.0
+python-telegram-bot>=20.0
 pytz==2025.1
-PyYAML==6.0.2
+PyYAML>=6.0.0
 pyzmq==26.2.1
 regex==2024.11.6
 requests==2.31.0
@@ -133,7 +133,7 @@ testcontainers-iris==1.2.2
 threadpoolctl==3.5.0
 tiktoken==0.9.0
 tokenizers==0.21.0
-torch==2.6.0
+torch>=2.0.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
@@ -146,3 +146,4 @@ wcwidth==0.2.13
 wrapt==1.17.2
 yarl==1.18.3
 zstandard==0.23.0
+opencv-python>=4.8.0
